--- a/Факультативные занятия/dpo_hw_3.ipynb
+++ b/Факультативные занятия/dpo_hw_3.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "dpo3_dataframe.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +17,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Ne5ter71/training/blob/Main/%D0%A4%D0%B0%D0%BA%D1%83%D0%BB%D1%8C%D1%82%D0%B0%D1%82%D0%B8%D0%B2%D0%BD%D1%8B%D0%B5%20%D0%B7%D0%B0%D0%BD%D1%8F%D1%82%D0%B8%D1%8F/dpo_hw_3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -37,7 +48,7 @@
       "metadata": {
         "id": "BOUyTEH3Xdbf"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -64,9 +75,9 @@
           "height": 206
         },
         "id": "0UBoh-G_Utxp",
-        "outputId": "9d99ad29-f00d-4df9-9a48-26afa6c08a5d"
+        "outputId": "5f3909b1-ed87-4301-d9ed-18a7b2f609e4"
       },
-      "execution_count": 9,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "display_data",
@@ -81,7 +92,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-e77094a0-c1e6-4680-ba9d-8665fd5e49df\">\n",
+              "  <div id=\"df-f4cf018a-1e17-4b7f-a447-78a47043edaf\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -152,7 +163,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e77094a0-c1e6-4680-ba9d-8665fd5e49df')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f4cf018a-1e17-4b7f-a447-78a47043edaf')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -203,12 +214,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-e77094a0-c1e6-4680-ba9d-8665fd5e49df button.colab-df-convert');\n",
+              "          document.querySelector('#df-f4cf018a-1e17-4b7f-a447-78a47043edaf button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-e77094a0-c1e6-4680-ba9d-8665fd5e49df');\n",
+              "          const element = document.querySelector('#df-f4cf018a-1e17-4b7f-a447-78a47043edaf');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -254,14 +265,14 @@
         "df.sample(2)"
       ],
       "metadata": {
-        "id": "JQcR4FRJyd6M",
-        "outputId": "ac969955-07c7-41de-e060-a5faf2361fe0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 112
-        }
+        },
+        "id": "JQcR4FRJyd6M",
+        "outputId": "ac969955-07c7-41de-e060-a5faf2361fe0"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -411,13 +422,13 @@
       ],
       "metadata": {
         "id": "A44z2sDmZE4i",
-        "outputId": "98717638-e7b6-4355-c819-2bfbe28334dd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 112
-        }
+        },
+        "outputId": "98717638-e7b6-4355-c819-2bfbe28334dd"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -566,14 +577,14 @@
         "df.tail(2)"
       ],
       "metadata": {
-        "id": "NOEdAPVmyqMk",
-        "outputId": "bde38d22-b6ba-4d39-ca0d-9015f12da50f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 112
-        }
+        },
+        "id": "NOEdAPVmyqMk",
+        "outputId": "bde38d22-b6ba-4d39-ca0d-9015f12da50f"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -722,14 +733,14 @@
         "df.take([3,4])"
       ],
       "metadata": {
-        "id": "ZesIu1kfzFeK",
-        "outputId": "9440eeee-90ae-4682-ac75-4425e0414d5b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 112
-        }
+        },
+        "id": "ZesIu1kfzFeK",
+        "outputId": "9440eeee-90ae-4682-ac75-4425e0414d5b"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -891,12 +902,12 @@
       ],
       "metadata": {
         "id": "tNb_RQLZV-bm",
-        "outputId": "f3dfd530-d1d4-4832-e96b-6862c0e37e35",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7c1acf26-4671-4951-df1a-81085d2e3742"
       },
-      "execution_count": 24,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -919,13 +930,34 @@
     {
       "cell_type": "code",
       "source": [
-        "#Ваш код здесь"
+        "#Ваш код здесь\n",
+        "df.dtypes"
       ],
       "metadata": {
-        "id": "8SOJBnWhbE-n"
+        "id": "8SOJBnWhbE-n",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5105539e-f680-4afa-de16-09b9eb76c9b2"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "student_fio    object\n",
+              "name           object\n",
+              "gender         object\n",
+              "age             int64\n",
+              "curs            int64\n",
+              "dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
     },
     {
       "cell_type": "markdown",
